owner added to locker

--- a/src/templates/locker/index.html.twig
+++ b/src/templates/locker/index.html.twig
@@ -11,6 +11,7 @@
                 <th>Id</th>
                 <th>Number</th>
                 <th>IsEmpty</th>
+                <th>Owner</th>
                 <th>actions</th>
             </tr>
         </thead>
