--- a/src/templates/locker/show.html.twig
+++ b/src/templates/locker/show.html.twig
@@ -19,6 +19,10 @@
                 <th>IsEmpty</th>
                 <td>{{ locker.isEmpty ? 'Yes' : 'No' }}</td>
             </tr>
+            <tr>
+                <th>Owner</th>
+                <td>{{ locker.owner.username }}</td>
+            </tr>
         </tbody>
     </table>
 
