fix lockers logic

--- a/src/templates/user/index.html.twig
+++ b/src/templates/user/index.html.twig
@@ -8,8 +8,8 @@
     <h1>Hello!</h1>
 
     <ul>
-        <li>Your controller at <a href="{{ '/var/www/html/src/Controller/UserController.php'|file_link(0) }}">
-                src/Controller/UserController.php</a></li>
+        <li><a href="{{path('app_user_locker')}}">
+                Open Locker</a></li>
         <li><a href="index.php/product">Products</a></li>
     </ul>
 </div>
