--- a/src/templates/login/index.html.twig
+++ b/src/templates/login/index.html.twig
@@ -7,16 +7,25 @@
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
     <h1>Login</h1>
-    <form action="{{ path('app_login') }}" method="post">
-        <label for="username">Email:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}"/>
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password"/>
 
-        {# If you want to control the URL the user is redirected to on success
-        <input type="hidden" name="_target_path" value="/account"/> #}
-        <br>
-        <button type="submit">login</button>
-    </form>
+    <div class="container">
+    <div class="row justify-content-md-center">
+        <div class="col-5">
+            <div class="form-group">
+                <label for="username">Phone number</label>
+                <input type="text" class="form-control" id="username" name="_username" placeholder="Enter phone number"
+                       value="{{ last_username }}"/>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" name="_password"
+                       placeholder="Password">
+            </div>
+            <br>
+            <div>
+                <button type="submit" class="btn btn-outline-primary">Login</button>
+            </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
