--- a/src/templates/login/index.html.twig
+++ b/src/templates/login/index.html.twig
@@ -1,29 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Welcome to vip gym{% endblock %}
+{% block title %}{{'login.welcome.title'|trans}}{% endblock %}
 
 {% block body %}
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
-    <h1>Login</h1>
+    <h1>{{'login.title'|trans}}</h1>
 
     <div class="container">
     <div class="row justify-content-md-center">
         <div class="col-5">
             <div class="form-group">
-                <label for="username">Phone number</label>
-                <input type="text" class="form-control" id="username" name="_username" placeholder="Enter phone number"
-                       value="{{ last_username }}"/>
+                <label for="username">{{'login.username'|trans}}</label>
+                <input type="text" class="form-control" id="username" name="_username"
+                       placeholder= "09********" value="{{ last_username }}"/>
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">{{'login.password'|trans}}</label>
                 <input type="password" class="form-control" id="password" name="_password"
-                       placeholder="Password">
+                       placeholder= "password">
             </div>
             <br>
             <div>
-                <button type="submit" class="btn btn-outline-primary">Login</button>
+                <button type="submit" class="btn btn-outline-primary">{{'login.button'|trans}}</button>
             </div>
             </form>
         </div>
