--- a/src/templates/membership/index.html.twig
+++ b/src/templates/membership/index.html.twig
@@ -1,39 +1,36 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Membership index{% endblock %}
+{% block title %}{{'global.membership'|trans}}{% endblock %}
 
 {% block body %}
-    <h1>Membership index</h1>
+    <h1>{{'global.membership'|trans}}</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Length</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
         {% for membership in memberships %}
-            <tr>
-                <td>{{ membership.id }}</td>
-                <td>{{ membership.name }}</td>
-                <td>{{ membership.price }}</td>
-                <td>{{ membership.length }}</td>
-                <td>
-                    <a href="{{ path('app_membership_show', {'id': membership.id}) }}">show</a>
-                    <a href="{{ path('app_membership_edit', {'id': membership.id}) }}">edit</a>
-                </td>
-            </tr>
+            <div class="card bg-light mb-3 d-lg-inline-flex" style="max-width: 18rem;">
+                <div class="card-header">{{ membership.name }}</div>
+                <div class="card-body">
+                    <p class="card-text"><small>{{'global.product_price'|trans}}</small></p>
+                    <h5 class="card-title"> {{membership.price | format_currency('IRR')}} </h5>
+                    <h5 class="card-title"> <small> {{'global.length'|trans}} </small> : {{membership.length}} </h5>
+                    <h5 class="card-title"> <small> {{'global.duration'|trans}} </small> : {{membership.duration}} </h5>
+                    <br>
+                    <div>
+                        <a href="{{ path('app_locker_show', {'id': membership.id}) }}" class="btn btn-primary">
+                            {{ 'global.show'|trans }}</a>
+                        <a href="{{ path('app_locker_edit', {'id': membership.id}) }}" class="btn btn-info">
+                            {{ 'global.edit'|trans }}</a>
+                    </div>
+                </div>
+            </div>
         {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
+            <div class="jumbotron">
+                <h1 class="display-4">{{ 'global.emptydata'|trans }}</h1>
+                <hr class="my-4">
+                <p>{{ 'global.create_data_text'|trans }}</p>
+            </div>
         {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_membership_new') }}">Create new</a>
+    <div>
+        <button type="button" class="btn btn-outline-dark btn-block" href="{{ path('app_locker_new') }}">
+            {{ 'global.create'|trans }}</button>
+    </div>
 {% endblock %}
