great chenges in db

--- a/src/templates/1.temp/membership/show.html.twig
+++ b/src/templates/1.temp/membership/show.html.twig
@@ -20,12 +20,8 @@
                 <td>{{ membership.price }}</td>
             </tr>
             <tr>
-                <th>NumberOfClasses</th>
-                <td>{{ membership.numberOfClasses }}</td>
-            </tr>
-            <tr>
-                <th>Duration</th>
-                <td>{{ membership.duration }}</td>
+                <th>Length</th>
+                <td>{{ membership.length }}</td>
             </tr>
         </tbody>
     </table>
