--- a/src/templates/locker/index.html.twig
+++ b/src/templates/locker/index.html.twig
@@ -21,14 +21,16 @@
                 </h5>
                 <br>
                 <div>
+                    <a href="{{ path('app_locker_show', {'id': locker.id}) }}" class="btn btn-primary">
+                        {{ 'global.show'|trans }}</a>
+{#                    {%if is_granted('ROLE_EMPLOYEE')%}#}
                     <a href="{{ path('app_locker_open', {'id': locker.id}) }}" class="btn btn-secondary">
                         {% if locker.isEmpty %} {{ 'global.close'|trans }}
                         {% else %} {{ 'global.open'|trans }} {% endif %}
                     </a>
-                    <a href="{{ path('app_locker_show', {'id': locker.id}) }}" class="btn btn-primary">
-                        {{ 'global.show'|trans }}</a>
                     <a href="{{ path('app_locker_edit', {'id': locker.id}) }}" class="btn btn-info">
                         {{ 'global.edit'|trans }}</a>
+{#                    {% endif %}#}
                 </div>
             </div>
         </div>
@@ -41,7 +43,9 @@
         </div>
     {% endfor %}
     <div>
-        <button type="button" class="btn btn-outline-dark btn-block" href="{{ path('app_locker_new') }}">
-            {{ 'global.create'|trans }}</button>
+{#        {% if is_granted('ROLE_EMPLOYEE')%}#}
+        <a type="button" class="btn btn-outline-dark btn-block" href="{{ path('app_locker_new') }}">
+            {{ 'global.create'|trans }}</a>
+{#        {%endif%}#}
     </div>
 {% endblock %}
