--- a/src/templates/login/index.html.twig
+++ b/src/templates/login/index.html.twig
@@ -11,6 +11,7 @@
     <div class="container">
     <div class="row justify-content-md-center">
         <div class="col-5">
+            <form action="{{ path('app_login') }}" method="post">
             <div class="form-group">
                 <label for="username">{{'login.username'|trans}}</label>
                 <input type="text" class="form-control" id="username" name="_username"
@@ -28,4 +29,20 @@
             </form>
         </div>
     </div>
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
+
+    <form action="{{ path('app_login') }}" method="post">
+        <label for="username">Email:</label>
+        <input type="text" id="username" name="_username" value="{{ last_username }}"/>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="_password"/>
+
+        {# If you want to control the URL the user is redirected to on success
+        <input type="hidden" name="_target_path" value="/account"/> #}
+
+        <button type="submit">login</button>
+    </form>
 {% endblock %}
