--- a/src/templates/user/index.html.twig
+++ b/src/templates/user/index.html.twig
@@ -26,7 +26,7 @@
                         <div class="card-body">
                             <h5 class="card-title">{{ 'global.membership'|trans }}</h5>
                             <br>
-                            <a href="{{ path('app_user_locker') }}"
+                            <a href="{{ path('app_membership_index') }}"
                                class="btn btn-primary">{{ 'global.enter'|trans }}</a>
                         </div>
                     </div>
