--- a/src/templates/locker/index.html.twig
+++ b/src/templates/locker/index.html.twig
@@ -16,21 +16,38 @@
             <div class="card-header">{{ locker.number }}</div>
             <div class="card-body">
                 <h5 class="card-title">
-                    {% if locker.isEmpty %} {{ 'global.empty'|trans }}
-                    {% else %} {{ 'global.full'|trans }} {% endif %}
+                    {% if locker.isEmpty %}
+                        {{ 'global.empty'|trans }}
+                    {% else %}
+                        {{ 'global.full'|trans }}
+                    {% endif %}
                 </h5>
+                <p class="card-text">
+                    {% if not locker.isEmpty %}
+                        {% if locker.getOwner.getName is not null %}
+                            {{ locker.getOwner.getName }}
+                            {% if locker.getOwner.getLastname is not null %}
+                                {{ locker.getOwner.getLastname }}
+                            {% endif %}
+                        {% else %}
+                            {{ locker.getOwner.getUsername }}
+                        {% endif %}
+                    {% else %}
+                        <br>
+                    {% endif %}
+                </p>
                 <br>
                 <div>
                     <a href="{{ path('app_locker_show', {'id': locker.id}) }}" class="btn btn-primary">
                         {{ 'global.show'|trans }}</a>
-{#                    {%if is_granted('ROLE_EMPLOYEE')%}#}
+                    {#                    {%if is_granted('ROLE_EMPLOYEE')%} #}
                     <a href="{{ path('app_locker_open', {'id': locker.id}) }}" class="btn btn-secondary">
                         {% if locker.isEmpty %} {{ 'global.close'|trans }}
                         {% else %} {{ 'global.open'|trans }} {% endif %}
                     </a>
                     <a href="{{ path('app_locker_edit', {'id': locker.id}) }}" class="btn btn-info">
                         {{ 'global.edit'|trans }}</a>
-{#                    {% endif %}#}
+                    {#                    {% endif %} #}
                 </div>
             </div>
         </div>
@@ -43,9 +60,9 @@
         </div>
     {% endfor %}
     <div>
-{#        {% if is_granted('ROLE_EMPLOYEE')%}#}
+        {#        {% if is_granted('ROLE_EMPLOYEE')%} #}
         <a type="button" class="btn btn-outline-dark btn-block" href="{{ path('app_locker_new') }}">
             {{ 'global.create'|trans }}</a>
-{#        {%endif%}#}
+        {#        {%endif%} #}
     </div>
 {% endblock %}
