--- a/src/templates/locker/_delete_form.html.twig
+++ b/src/templates/locker/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_locker_delete', {'id': locker.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ locker.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-outline-danger">{{ 'global.delete' | trans }}</button>
 </form>
