--- a/src/templates/locker/new.html.twig
+++ b/src/templates/locker/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Locker{% endblock %}
+{% block title %}{{ 'locker.new' | trans }}{% endblock %}
 
 {% block body %}
-    <h1>Create new Locker</h1>
+    <h1>{{ 'locker.create_new' | trans }}</h1>
 
     {{ include('locker/_form.html.twig') }}
 
-    <a href="{{ path('app_locker_index') }}">back to list</a>
+    <a class="btn btn-outline-warning" href="{{ path('app_locker_index') }}">{{ 'global.back' | trans }}</a>
 {% endblock %}
