--- a/src/templates/membership/edit.html.twig
+++ b/src/templates/membership/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Membership{% endblock %}
+{% block title %}{{ 'global.membership' | trans }}{% endblock %}
 
 {% block body %}
-    <h1>Edit Membership</h1>
+    <h1>{{ 'global.membership' | trans }}</h1>
 
     {{ include('membership/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_membership_index') }}">back to list</a>
+    <a type="button" class="btn btn-outline-warning" href="{{ path('app_membership_index') }}">{{ 'global.back' | trans }}</a>
 
     {{ include('membership/_delete_form.html.twig') }}
 {% endblock %}
