--- a/src/templates/membership/new.html.twig
+++ b/src/templates/membership/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Membership{% endblock %}
+{% block title %}{{ 'membership.new' | trans }}{% endblock %}
 
 {% block body %}
-    <h1>Create new Membership</h1>
+    <h1>{{ 'membership.create_new' | trans }}</h1>
 
     {{ include('membership/_form.html.twig') }}
 
-    <a href="{{ path('app_membership_index') }}">back to list</a>
+    <a class="btn btn-outline-warning" href="{{ path('app_membership_index') }} ">{{ 'global.back' | trans }}</a>
 {% endblock %}
