--- a/src/templates/product/edit.html.twig
+++ b/src/templates/product/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Product{% endblock %}
+{% block title %}{{ 'product.edit' | trans }}{% endblock %}
 
 {% block body %}
-    <h1>Edit Product</h1>
+    <h1>{{ 'product.edit' | trans }}</h1>
 
     {{ include('product/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_product_index') }}">back to list</a>
+    <a type="button" class="btn btn-outline-warning href="{{ path('app_product_index') }}" >{{ 'global.back' | trans }}</a>
 
     {{ include('product/_delete_form.html.twig') }}
 {% endblock %}
