--- a/src/templates/product/index.html.twig
+++ b/src/templates/product/index.html.twig
@@ -13,10 +13,12 @@
                     <h5 class="card-title"> {{product.price | format_currency('IRR')}} </h5>
                     <br>
                     <div>
-                        <a href="{{ path('app_locker_show', {'id': product.id}) }}" class="btn btn-primary">
+                        <a href="{{ path('app_product_show', {'id': product.id}) }}" class="btn btn-primary">
                            {{ 'global.show'|trans }}</a>
+                        <a href="{{ path('app_product_buy', {'id': product.id}) }}" class="btn btn-primary">
+                            {{ 'global.buy'|trans }}</a>
 {#                        {%if is_granted('ROLE_EMPLOYEE')%}#}
-                        <a href="{{ path('app_locker_edit', {'id': product.id}) }}" class="btn btn-info">
+                        <a href="{{ path('app_product_edit', {'id': product.id}) }}" class="btn btn-info">
                             {{ 'global.edit'|trans }}</a>
 {#                        {%endif%}#}
                     </div>
@@ -31,8 +33,8 @@
         {% endfor %}
     <div>
 {#        {%if is_granted('ROLE_EMPLOYEE')%}#}
-        <button type="button" class="btn btn-outline-dark btn-block" href="{{ path('app_locker_new') }}">
-            {{ 'global.create'|trans }}</button>
+        <a type="button" class="btn btn-outline-dark btn-block" href="{{ path('app_product_new') }}">
+            {{ 'global.create'|trans }}</a>
 {#        {%endif%}#}
     </div>
 {% endblock %}
