--- a/src/templates/product/show.html.twig
+++ b/src/templates/product/show.html.twig
@@ -1,30 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Product{% endblock %}
+{% block title %}{{ product.name }}{% endblock %}
 
 {% block body %}
-    <h1>Product</h1>
+    <h1>{{ 'global.id' | trans }}</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>{{ 'global.id' | trans }}</th>
                 <td>{{ product.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>{{ 'global.name' | trans }}</th>
                 <td>{{ product.name }}</td>
             </tr>
             <tr>
-                <th>Price</th>
-                <td>{{ product.price }}</td>
+                <th>{{ 'global.price' | trans }}</th>
+                <td>{{product.price | format_currency('IRR')}}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_product_index') }}">back to list</a>
+    <a class="btn btn-outline-warning" href="{{ path('app_product_index') }}">{{ 'global.back' | trans }}</a>
 
-    <a href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a>
+    <a class="btn btn-outline-primary" href="{{ path('app_product_edit', {'id': product.id}) }}">{{ 'global.edit' | trans }}</a>
 
     {{ include('product/_delete_form.html.twig') }}
 {% endblock %}
