--- a/src/templates/locker/show.html.twig
+++ b/src/templates/locker/show.html.twig
@@ -7,31 +7,33 @@
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>{{ 'global.id' | trans }}</th>
-                <td>{{ locker.id }}</td>
-            </tr>
-            <tr>
-                <th>{{ 'global.number' | trans }}</th>
-                <td>{{ locker.number }}</td>
-            </tr>
-            <tr>
-                <th>{{ 'locker.isempty' | trans }}</th>
-                <td>                    {% if locker.isEmpty %}
-                        {{ 'global.empty'|trans }}
-                    {% else %}
-                        {{ 'global.full'|trans }}
-                    {% endif %}</td>
-            </tr>
+        <tr>
+            <th>{{ 'global.id' | trans }}</th>
+            <td>{{ locker.id }}</td>
+        </tr>
+        <tr>
+            <th>{{ 'global.number' | trans }}</th>
+            <td>{{ locker.number }}</td>
+        </tr>
+        <tr>
+            <th>{{ 'locker.isempty' | trans }}</th>
+            <td>                    {% if locker.isEmpty %}
+                    {{ 'global.empty'|trans }}
+                {% else %}
+                    {{ 'global.full'|trans }}
+                {% endif %}</td>
+        </tr>
         </tbody>
     </table>
 
     <a class="btn btn-outline-warning" href="{{ path('app_locker_index') }}">{{ 'global.back' | trans }}</a>
+    {% if is_granted('ROLE_EMPLOYEE') %}
+        <a class="btn btn-outline-primary"
+           href="{{ path('app_locker_edit', {'id': locker.id}) }}">{{ 'global.edit' | trans }}</a>
+        <a class="btn btn-outline-dark" href="{{ path('app_locker_open', {'id': locker.id}) }}">
+            {% if locker.isEmpty %} {{ 'global.close'|trans }}
+            {% else %} {{ 'global.open'|trans }} {% endif %}</a>
 
-    <a class="btn btn-outline-primary" href="{{ path('app_locker_edit', {'id': locker.id}) }}">{{ 'global.edit' | trans }}</a>
-    <a class="btn btn-outline-dark" href="{{ path('app_locker_open', {'id': locker.id}) }}">
-        {% if locker.isEmpty %} {{ 'global.close'|trans }}
-        {% else %} {{ 'global.open'|trans }} {% endif %}</a>
-
-    {{ include('locker/_delete_form.html.twig') }}
+        {{ include('locker/_delete_form.html.twig') }}
+    {% endif %}
 {% endblock %}
