--- a/src/templates/product/index.html.twig
+++ b/src/templates/product/index.html.twig
@@ -5,36 +5,36 @@
 {% block body %}
     <h1>{{ 'global.product'|trans }}</h1>
 
-        {% for product in products %}
-            <div class="card bg-light mb-3 d-lg-inline-flex " style="max-width: 18rem;">
-                <div class="card-header">{{ product.name }}</div>
-                <div class="card-body">
-                    <p class="card-text"><small>{{'global.product_price'|trans}}</small></p>
-                    <h5 class="card-title"> {{product.price | format_currency('IRR')}} </h5>
-                    <br>
-                    <div>
-                        <a href="{{ path('app_product_show', {'id': product.id}) }}" class="btn btn-primary">
-                           {{ 'global.show'|trans }}</a>
-                        <a href="{{ path('app_product_buy', {'id': product.id}) }}" class="btn btn-primary">
-                            {{ 'global.buy'|trans }}</a>
-{#                        {%if is_granted('ROLE_EMPLOYEE')%}#}
+    {% for product in products %}
+        <div class="card bg-light mb-3 d-lg-inline-flex " style="max-width: 18rem;">
+            <div class="card-header">{{ product.name }}</div>
+            <div class="card-body">
+                <p class="card-text"><small>{{ 'global.product_price'|trans }}</small></p>
+                <h5 class="card-title"> {{ product.price | format_currency('IRR') }} </h5>
+                <br>
+                <div>
+                    <a href="{{ path('app_product_show', {'id': product.id}) }}" class="btn btn-primary">
+                        {{ 'global.show'|trans }}</a>
+                    <a href="{{ path('app_product_buy', {'id': product.id}) }}" class="btn btn-primary">
+                        {{ 'global.buy'|trans }}</a>
+                    {% if is_granted('ROLE_EMPLOYEE') %}
                         <a href="{{ path('app_product_edit', {'id': product.id}) }}" class="btn btn-info">
                             {{ 'global.edit'|trans }}</a>
-{#                        {%endif%}#}
-                    </div>
+                    {% endif %}
                 </div>
             </div>
-        {% else %}
-            <div class="jumbotron">
-                <h1 class="display-4">{{ 'global.emptydata'|trans }}</h1>
-                <hr class="my-4">
-                <p>{{ 'global.create_data_text'|trans }}</p>
-            </div>
-        {% endfor %}
+        </div>
+    {% else %}
+        <div class="jumbotron">
+            <h1 class="display-4">{{ 'global.emptydata'|trans }}</h1>
+            <hr class="my-4">
+            <p>{{ 'global.create_data_text'|trans }}</p>
+        </div>
+    {% endfor %}
     <div>
-{#        {%if is_granted('ROLE_EMPLOYEE')%}#}
-        <a type="button" class="btn btn-outline-dark btn-block" href="{{ path('app_product_new') }}">
-            {{ 'global.create'|trans }}</a>
-{#        {%endif%}#}
+        {% if is_granted('ROLE_EMPLOYEE') %}
+            <a type="button" class="btn btn-outline-dark btn-block" href="{{ path('app_product_new') }}">
+                {{ 'global.create'|trans }}</a>
+        {% endif %}
     </div>
 {% endblock %}
